added artist routes
